--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col">
                     <div class="card border-0 shadow-lg h-100">
-                        <img src="/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
                             <h2>$160</h2>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col">
                     <div class="card border-0 shadow-lg h-100">
-                        <img src="/images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
                             <h2>$160</h2>
